[gd_scene load_steps=17 format=3 uid="uid://g1bbjuxx7y6r"]

[ext_resource type="PackedScene" uid="uid://yhk00phu0f1q" path="res://scenes/Background.tscn" id="1"]
[ext_resource type="Texture2D" uid="uid://ciwg3qm2f1vvx" path="res://assets/main_menu/background_rock.png" id="2_qx00q"]
[ext_resource type="PackedScene" uid="uid://dk5x1jwwqfudd" path="res://scenes/Button.tscn" id="3"]
[ext_resource type="Script" path="res://scripts/main_menu/MainMenuBackground.gd" id="3_ilx14"]
[ext_resource type="Script" path="res://scripts/main_menu/Buttons.gd" id="4_8qrbl"]
[ext_resource type="Shader" path="res://resources/MainMenu.gdshader" id="4_vsaok"]
[ext_resource type="Texture2D" uid="uid://caqhgsxvbjywl" path="res://assets/button.png" id="5"]
[ext_resource type="PackedScene" uid="uid://dudcc8gr3wqwy" path="res://scenes/CatRender.tscn" id="8_enf0q"]
[ext_resource type="FontFile" uid="uid://dfk8xtru286kd" path="res://resources/fonts/PixeloidSans-nR3g1.ttf" id="9_rlpkl"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5xvaf"]
shader = ExtResource("4_vsaok")

[sub_resource type="Theme" id="Theme_de1fj"]
default_font = ExtResource("9_rlpkl")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3es2l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y3q03"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rad8s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_068eu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v2etq"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" parent="." instance=ExtResource("1")]
layout_mode = 1
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qx00q")
script = ExtResource("3_ilx14")

[node name="Title" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.1
anchor_top = 0.15
anchor_right = 0.9
anchor_bottom = 0.4

[node name="RestOfTheTitleLabel" type="Label" parent="Title"]
material = SubResource("ShaderMaterial_5xvaf")
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 100
text = "Luni's C    t Tail"

[node name="CatRender" parent="Title" instance=ExtResource("8_enf0q")]
position = Vector2(474, 150)

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.1
anchor_top = 0.45
anchor_right = 0.2
anchor_bottom = 0.8
script = ExtResource("4_8qrbl")

[node name="ContinueRect" type="NinePatchRect" parent="Buttons"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
texture = ExtResource("5")
patch_margin_left = 30
patch_margin_top = 10
patch_margin_right = 30
patch_margin_bottom = 10

[node name="Continue" parent="Buttons/ContinueRect" instance=ExtResource("3")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.5
offset_top = -15.5
offset_right = 39.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_de1fj")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_3es2l")
flat = true

[node name="SwitchClanRect" type="NinePatchRect" parent="Buttons"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
texture = ExtResource("5")
patch_margin_left = 30
patch_margin_top = 10
patch_margin_right = 30
patch_margin_bottom = 10

[node name="SwitchClan" parent="Buttons/SwitchClanRect" instance=ExtResource("3")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = -15.5
offset_right = 48.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_y3q03")
text = "Switch"
flat = true

[node name="NewClanRect" type="NinePatchRect" parent="Buttons"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
texture = ExtResource("5")
patch_margin_left = 30
patch_margin_top = 10
patch_margin_right = 30
patch_margin_bottom = 10

[node name="NewClan" parent="Buttons/NewClanRect" instance=ExtResource("3")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -15.5
offset_right = 41.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_rad8s")
text = "New"
flat = true

[node name="SettingsRect" type="NinePatchRect" parent="Buttons"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
texture = ExtResource("5")
patch_margin_left = 30
patch_margin_top = 10
patch_margin_right = 30
patch_margin_bottom = 10

[node name="Settings" parent="Buttons/SettingsRect" instance=ExtResource("3")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -15.5
offset_right = 35.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_068eu")
text = "Settings"
flat = true

[node name="QuitRect" type="NinePatchRect" parent="Buttons"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
texture = ExtResource("5")
patch_margin_left = 30
patch_margin_top = 10
patch_margin_right = 30
patch_margin_bottom = 10

[node name="Quit" parent="Buttons/QuitRect" instance=ExtResource("3")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -15.5
offset_right = 35.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_v2etq")
text = "Quit"
flat = true

[node name="QuitRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(250, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -386.0
offset_top = -114.0
offset_right = -25.0
offset_bottom = -25.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("5")
patch_margin_left = 30
patch_margin_top = 10
patch_margin_right = 30
patch_margin_bottom = 10

[node name="RichTextLabel" type="RichTextLabel" parent="QuitRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = -5.0
offset_right = -25.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]
Programming & UI - [wave amp=50 freq=20]Kazani[/wave]
Art - [shake][rainbow]derangedpepper[/rainbow][/shake]
Emotional Support - Neko [font_size=14](our cat)[/font_size]
[/center]"
fit_content = true
scroll_active = false

[connection signal="pressed" from="Buttons/ContinueRect/Continue" to="Buttons" method="_on_continue_pressed"]
[connection signal="pressed" from="Buttons/SwitchClanRect/SwitchClan" to="Buttons" method="_on_switch_clan_pressed"]
[connection signal="pressed" from="Buttons/NewClanRect/NewClan" to="Buttons" method="_on_new_clan_pressed"]
[connection signal="pressed" from="Buttons/SettingsRect/Settings" to="Buttons" method="_on_settings_pressed"]
[connection signal="pressed" from="Buttons/QuitRect/Quit" to="Buttons" method="_on_quit_pressed"]
